# assignment-products

./: .gitignore  Cargo.toml  README.md  template.yml
ap-endpoint-add/: Cargo.toml
ap-endpoint-add/src/: main.rs
ap-endpoint-get/: Cargo.toml
ap-endpoint-get/src/: main.rs
ap-model/: Cargo.toml
ap-model/src/: lib.rs
