[workspace]
resolver = "2"

members = ["ap-endpoint-get", "ap-model"]

[workspace.dependencies]
lambda_http = "0.11.1"

tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.21.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
