[package]
name = "ap-endpoint-add"
version = "0.1.0"
description = "Endpoint to add new items to the database."
edition = "2021"

[dependencies]
lambda_http = { workspace = true }
tokio = { workspace = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

ap-model = { path = "../ap-model" }
